# Audio_Identifier

./: .gitignore  pyproject.toml
src/identifier/: README.md  ingestion.py  main.py  recognition.py
src/processing/: separator.py
