[project]
name = "Audio-Identifier"
version = "0.1"
authors = [{name = "Amarjeet", email = "kumaramarjeet8294@gmail.com"}]
description = "Modular tool for music and SFX identification"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "ffmpeg-python",  # Python bindings for FFmpeg
    "spleeter",           # For vocal/accompaniment separation
    "librosa",            # For audio analysis and feature extraction
    "tensorflow",         # Backend for YAMNet and Spleeter
    "tensorflow-hub",     # To load the pre-trained YAMNet model [3, 4]
    "acrcloud",           # For music identification API [5, 6]
    "freesound-python",   # For SFX metadata and similarity search [7, 8]
    "pydub"               # For high-level audio manipulation [9, 1]
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}